--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
       <th>Header 10</th>
       <th>Header 11</th>
       <th>Header 12</th>
-      <th>Header III A</th>
-      <th>Header IV A</th>
-      <th>Header V A</th>
-      <th>Header VI A</th>
-      <th>Header VII A</th>
-      <th>Header VIII A</th>
+      <th>III A</th>
+      <th>IV A</th>
+      <th>V A</th>
+      <th>VI A</th>
+      <th>VII A</th>
+      <th>VIII A</th>
     </tr>
   </thead>
   <tbody>
