--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
        </td>
     </tr>
     <tr>
-       <td id="lithium" class="solids" tabindex="0">Lithium
+    <td id="lithium" class="solids" tabindex="0">Lithium
           <ul>
              <li data-atomicnumber="3">3</li>
-             <li data-symbol="li" class="bigfont2 em-tight">L i</li>
+             <li data-symbol="li" class="bigfont2">L<span class="letter-tight">i</span></li>
              <li data-weight="l.008">1.008</li>
              <li data-groundstate="lithium">1s^2 2s</li>
              <li data-ev="5.3917">5.3917</li>
@@ -123,10 +123,10 @@
         <td id="beryllium" class="solids" tabindex="0">Beryllium
           <ul>
              <li data-atomicnumber="4">4</li>
-             <li data-symbol="beryllium" class="bigfont2 em-tight">B e</li>
-             <li data-weight="beryllium">9.0122</li>
+             <li data-symbol="be" class="bigfont2">B<span class="letter-tight">e</span></li>
+             <li data-weight="9.0122">9.0122</li>
              <li data-groundstate="beryllium">1s^2 2s^2</li>
-             <li data-ev="beryllium">9.3227</li>
+             <li data-ev="9.3227">9.3227</li>
           </ul>
         </td>
       <td class="hidden">Row 2, Cell 3</td>
