--- a/index_backup1.html
+++ b/index_backup1.html
@@ -18,6 +18,7 @@
      Unfortunately your browser has disabled scripting. Please enable it in order to display this page.
   </noscript>
 <![endif]-->
+
 <head>
   <title>Inclusive Chemistry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,6 +50,8 @@
  <label for="search_field_input">Search Elements (Alphabetical Search):</label>
  <input id="search_field_input" onkeyup="search_table()" type="text">
 </div>
+<!-- IMPORTANT do not change ARIA LABEL.  The aria-label is used to over-ride screen reader mispronunciation of numbers with decimals in them as they apply to atomic weights --> 
+<!-- IMPORTANT do not change CSS.  Font kerning used to allow screen readers to pronounce elements by individual letters but fool the eye into thinking the letters are assocated with one another --> 
 <div class="left100">
 <table id="table_id">
   <thead>
@@ -65,20 +68,21 @@
       <th>Header 10</th>
       <th>Header 11</th>
       <th>Header 12</th>
-      <th>Header III A</th>
-      <th>Header IV A</th>
-      <th>Header V A</th>
-      <th>Header VI A</th>
-      <th>Header VII A</th>
-      <th>Header VIII A</th>
+      <th>III A</th>
+      <th>IV A</th>
+      <th>V A</th>
+      <th>VI A</th>
+      <th>VII A</th>
+      <th>VIII A</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="gases" tabindex="0">Hydrogen
+       <td id="hydrogen" class="gases" tabindex="0">
           <ul>
              <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number one">1</span></li>
-             <li data-symbol="h"><span class="bigfont2" aria-label="atomic symbol H">H</span></li>
+             <li data-symbol="h" aria-label="atomic symbol H" class="bigfont2"><span class="letter-tight" >H</span></li>
+             <li data-element="hydrogen"><span class="bigfont1" aria-label="element">Hydrogen</span></li>
              <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight one point zero zero eight">1.008</span></li>
              <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
              <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy thirteen point five nine eight four">13.5984</span></li> 
@@ -100,33 +104,35 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-      <td id="helium" class="solids" tabindex="0">Helium
+      <td id="helium" class="solids" tabindex="0">
            <ul>
-             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number two">2</span></li>
-             <li data-symbol="h e"><span class="bigfont2" aria-label="atomic symbol H">H e</span></li>
-             <li data-weight="helium"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
-             <li data-ev="helium">24.5874</li>
-             <li data-groundstate="hydrogen">1 s ^</li>  
+            <ul>
+             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number one">2</span></li>
+             <li data-symbol="he" aria-label="atomic symbol He" class="bigfont2">H<span class="letter-tight" >e</span></li>
+             <li data-element="helium"><span class="bigfont1" aria-label="element">Helium</span></li>
+             <li data-weight="4.0026"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
+             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
+             <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy thirteen point five nine eight four">13.5984</span></li> 
           </ul>
        </td>
     </tr>
     <tr>
-       <td id="lithium" class="solids" tabindex="0">Lithium
+    <td id="lithium" class="solids" tabindex="0">Lithium
           <ul>
              <li data-atomicnumber="3">3</li>
-             <li data-symbol="lithium">L i</li>
-             <li data-weight="lithium">1.008</li>
+             <li data-symbol="li" class="bigfont2">L<span class="letter-tight">i</span></li>
+             <li data-weight="l.008">1.008</li>
              <li data-groundstate="lithium">1s^2 2s</li>
-             <li data-ev="lithium">5.3917</li>
+             <li data-ev="5.3917">5.3917</li>
           </ul>
         </td>
         <td id="beryllium" class="solids" tabindex="0">Beryllium
           <ul>
              <li data-atomicnumber="4">4</li>
-             <li data-symbol="beryllium">B e</li>
-             <li data-weight="beryllium">9.0122</li>
+             <li data-symbol="be" class="bigfont2">B<span class="letter-tight">e</span></li>
+             <li data-weight="9.0122">9.0122</li>
              <li data-groundstate="beryllium">1s^2 2s^2</li>
-             <li data-ev="beryllium">9.3227</li>
+             <li data-ev="9.3227">9.3227</li>
           </ul>
         </td>
       <td class="hidden">Row 2, Cell 3</td>
