--- a/index.html
+++ b/index.html
@@ -112,20 +112,22 @@
              <li data-element="helium"><span class="bigfont1" aria-label="element">Helium</span></li>
              <li data-weight="4.0026"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
              <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
-             <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy thirteen point five nine eight four">13.5984</span></li> 
+             <li data-ev="24.5874"><span class="bigfont1" aria-label="ionization energy twenty four point five eight seven four">24.5874</span></li> 
           </ul>
        </td>
     </tr>
     <tr>
-    <td id="lithium" class="solids" tabindex="0">Lithium
-          <ul>
-             <li data-atomicnumber="3">3</li>
-             <li data-symbol="li" class="bigfont2">L<span class="letter-tight">i</span></li>
-             <li data-weight="l.008">1.008</li>
-             <li data-groundstate="lithium">1s^2 2s</li>
-             <li data-ev="5.3917">5.3917</li>
+      <td id="lithium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number one">2</span></li>
+             <li data-symbol="he" aria-label="atomic symbol He" class="bigfont2">H<span class="letter-tight" >e</span></li>
+             <li data-element="helium"><span class="bigfont1" aria-label="element">Helium</span></li>
+             <li data-weight="4.0026"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
+             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
+             <li data-ev="24.5874"><span class="bigfont1" aria-label="ionization energy twenty four point five eight seven four">24.5874</span></li> 
           </ul>
-        </td>
+       </td>
         <td id="beryllium" class="solids" tabindex="0">Beryllium
           <ul>
              <li data-atomicnumber="4">4</li>
