--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
       <td id="lithium" class="solids" tabindex="0">
            <ul>
             <ul>
-             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number one">2</span></li>
-             <li data-symbol="he" aria-label="atomic symbol He" class="bigfont2">H<span class="letter-tight" >e</span></li>
-             <li data-element="helium"><span class="bigfont1" aria-label="element">Helium</span></li>
-             <li data-weight="4.0026"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
-             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
-             <li data-ev="24.5874"><span class="bigfont1" aria-label="ionization energy twenty four point five eight seven four">24.5874</span></li> 
+             <li data-atomicnumber="3"><span class="bigfont1" aria-label="atomic number one">3</span></li>
+             <li data-symbol="li" aria-label="atomic symbol Li" class="bigfont2">L<span class="letter-tight">i</span></li>
+             <li data-element="lithium"><span class="bigfont1" aria-label="element">Lithium</span></li>
+             <li data-weight="6.94"><span class="bigfont1" aria-label="standard atomic weight 6 . 0 4">6.94</span></li>
+             <li data-groundstate="lithium"><span class="bigfont1" aria-label="ground state one s">1s^22s</span></li>
+             <li data-ev="5.3917"><span class="bigfont1" aria-label="ionization energy 5 . 3 9 1 7">5.3917</span></li> 
           </ul>
        </td>
         <td id="beryllium" class="solids" tabindex="0">Beryllium
