--- a/index_backup2.html
+++ b/index_backup2.html
@@ -18,6 +18,7 @@
      Unfortunately your browser has disabled scripting. Please enable it in order to display this page.
   </noscript>
 <![endif]-->
+
 <head>
   <title>Inclusive Chemistry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,7 +39,7 @@
 </style>
  </head>
 
-  <body>
+ <body>
 <div class="left100 bottom50">
 <h1>Searchable Periodic Table</h1>
 <p tabindex="0">The elements are set up in a table, one element per cell. Each table cell contains the name of the element, and a list of five items containing the atomic number, the atomic symbol, the atomic weight, the ground state configuration, and the ionization energy.</p>
@@ -49,6 +50,8 @@
  <label for="search_field_input">Search Elements (Alphabetical Search):</label>
  <input id="search_field_input" onkeyup="search_table()" type="text">
 </div>
+<!-- IMPORTANT do not change ARIA LABEL.  The aria-label is used to over-ride screen reader mispronunciation of numbers with decimals in them as they apply to atomic weights --> 
+<!-- IMPORTANT do not change CSS.  Font kerning used to allow screen readers to pronounce elements by individual letters but fool the eye into thinking the letters are assocated with one another --> 
 <div class="left100">
 <table id="table_id">
   <thead>
@@ -75,10 +78,11 @@
   </thead>
   <tbody>
     <tr>
-       <td id="hydrogen" class="gases" tabindex="0">Hydrogen
+       <td id="hydrogen" class="gases" tabindex="0">
           <ul>
              <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number one">1</span></li>
-             <li data-symbol="h"><span class="bigfont2 em-tight" aria-label="atomic symbol H">H</span></li>
+             <li data-symbol="h" aria-label="atomic symbol H" class="bigfont2"><span class="letter-tight" >H</span></li>
+             <li data-element="hydrogen"><span class="bigfont1" aria-label="element">Hydrogen</span></li>
              <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight one point zero zero eight">1.008</span></li>
              <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
              <li data-ev="hydrogen"><span class="bigfont1" aria-label="ionization energy thirteen point five nine eight four">13.5984</span></li> 
@@ -100,33 +104,37 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-      <td id="helium" class="solids" tabindex="0">Helium
+      <td id="helium" class="solids" tabindex="0">
            <ul>
-             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number two">2</span></li>
-             <li data-symbol="h e"><span "class="bigfont2 em-tight" aria-label="atomic symbol H">H e</span></li>
-             <li data-weight="helium"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
-             <li data-ev="helium">24.5874</li>
-             <li data-groundstate="hydrogen">1 s ^</li>  
+            <ul>
+             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number one">2</span></li>
+             <li data-symbol="he" aria-label="atomic symbol He" class="bigfont2">H<span class="letter-tight" >e</span></li>
+             <li data-element="helium"><span class="bigfont1" aria-label="element">Helium</span></li>
+             <li data-weight="4.0026"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
+             <li data-groundstate="hydrogen"><span class="bigfont1" aria-label="ground state one s">1s</span></li>
+             <li data-ev="24.5874"><span class="bigfont1" aria-label="ionization energy twenty four point five eight seven four">24.5874</span></li> 
           </ul>
        </td>
     </tr>
     <tr>
-       <td id="lithium" class="solids" tabindex="0">Lithium
-          <ul>
-             <li data-atomicnumber="3">3</li>
-             <li data-symbol="lithium" class="bigfont2 em-tight">L i</li>
-             <li data-weight="lithium">1.008</li>
-             <li data-groundstate="lithium">1s^2 2s</li>
-             <li data-ev="lithium">5.3917</li>
+      <td id="lithium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="3"><span class="bigfont1" aria-label="atomic number one">3</span></li>
+             <li data-symbol="li" aria-label="atomic symbol Li" class="bigfont2">L<span class="letter-tight">i</span></li>
+             <li data-element="lithium"><span class="bigfont1" aria-label="element">Lithium</span></li>
+             <li data-weight="6.94"><span class="bigfont1" aria-label="standard atomic weight 6 . 0 4">6.94</span></li>
+             <li data-groundstate="lithium"><span class="bigfont1" aria-label="ground state one s">1s^22s</span></li>
+             <li data-ev="5.3917"><span class="bigfont1" aria-label="ionization energy 5 . 3 9 1 7">5.3917</span></li> 
           </ul>
-        </td>
+       </td>
         <td id="beryllium" class="solids" tabindex="0">Beryllium
           <ul>
              <li data-atomicnumber="4">4</li>
-             <li data-symbol="beryllium" class="bigfont2 em-tight">B e</li>
-             <li data-weight="beryllium">9.0122</li>
+             <li data-symbol="be" class="bigfont2">B<span class="letter-tight">e</span></li>
+             <li data-weight="9.0122">9.0122</li>
              <li data-groundstate="beryllium">1s^2 2s^2</li>
-             <li data-ev="beryllium">9.3227</li>
+             <li data-ev="9.3227">9.3227</li>
           </ul>
         </td>
       <td class="hidden">Row 2, Cell 3</td>
