--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <tr>
        <td id="hydrogen" class="gases" tabindex="0">
           <ul>
-             <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number one">1</span></li>
+             <li data-atomicnumber="1"><span class="bigfont1" aria-label="atomic number 1">1</span></li>
              <li data-symbol="h" aria-label="atomic symbol H" class="bigfont2"><span class="letter-tight" >H</span></li>
              <li data-element="hydrogen"><span class="bigfont1" aria-label="element">Hydrogen</span></li>
              <li data-weight="hydrogen"><span class="bigfont1" aria-label="standard atomic weight one point zero zero eight">1.008</span></li>
@@ -107,7 +107,7 @@
       <td id="helium" class="solids" tabindex="0">
            <ul>
             <ul>
-             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number one">2</span></li>
+             <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number 2">2</span></li>
              <li data-symbol="he" aria-label="atomic symbol He" class="bigfont2">H<span class="letter-tight" >e</span></li>
              <li data-element="helium"><span class="bigfont1" aria-label="element">Helium</span></li>
              <li data-weight="4.0026"><span class="bigfont1" aria-label="standard atomic weight four point zero zero two six">4.0026</span></li>
@@ -120,23 +120,25 @@
       <td id="lithium" class="solids" tabindex="0">
            <ul>
             <ul>
-             <li data-atomicnumber="3"><span class="bigfont1" aria-label="atomic number one">3</span></li>
-             <li data-symbol="li" aria-label="atomic symbol Li" class="bigfont2">L<span class="letter-tight">i</span></li>
+             <li data-atomicnumber="3"><span class="bigfont1" aria-label="atomic number 3">3</span></li>
+             <li data-symbol="li" aria-label="atomic symbol L i" class="bigfont2">L<span class="letter-tight">i</span></li>
              <li data-element="lithium"><span class="bigfont1" aria-label="element">Lithium</span></li>
              <li data-weight="6.94"><span class="bigfont1" aria-label="standard atomic weight 6 . 0 4">6.94</span></li>
              <li data-groundstate="lithium"><span class="bigfont1" aria-label="ground state one s">1s^22s</span></li>
              <li data-ev="5.3917"><span class="bigfont1" aria-label="ionization energy 5 . 3 9 1 7">5.3917</span></li> 
           </ul>
        </td>
-        <td id="beryllium" class="solids" tabindex="0">Beryllium
-          <ul>
-             <li data-atomicnumber="4">4</li>
-             <li data-symbol="be" class="bigfont2">B<span class="letter-tight">e</span></li>
-             <li data-weight="9.0122">9.0122</li>
-             <li data-groundstate="beryllium">1s^2 2s^2</li>
-             <li data-ev="9.3227">9.3227</li>
+      <td id="beryllium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="4"><span class="bigfont1" aria-label="atomic number 4">4</span></li>
+             <li data-symbol="be" aria-label="atomic symbol B e" class="bigfont2">B<span class="letter-tight">e</span></li>
+             <li data-element="beryllium"><span class="bigfont1" aria-label="element">Beryllium</span></li>
+             <li data-weight="9.0122"><span class="bigfont1" aria-label="standard atomic weight 9 . 0 1 2 2">9.0122</span></li>
+             <li data-groundstate="beryllium"><span class="bigfont1" aria-label="ground state one s">1s^2 2s^2</span></li>
+             <li data-ev="9.3227"><span class="bigfont1" aria-label="ionization energy 9 . 3 2 2 7">9.3227</span></li> 
           </ul>
-        </td>
+       </td>
       <td class="hidden">Row 2, Cell 3</td>
       <td class="hidden">Row 2, Cell 4</td>
       <td class="hidden">Row 2, Cell 5</td>
