--- a/index.html
+++ b/index.html
@@ -149,7 +149,17 @@
       <td class="hidden">Row 2, Cell 10</td>
       <td class="hidden">Row 2, Cell 11</td>
       <td class="hidden">Row 2, Cell 12</td>
-      <td>Row 2, Cell 13</td>
+            <td id="boron" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="5"><span class="bigfont1" aria-label="atomic number 5">5</span></li>
+             <li data-symbol="b" aria-label="atomic symbol B" class="bigfont2">B<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="boron"><span class="bigfont1" aria-label="element">Boron</span></li>
+             <li data-weight="10.81"><span class="bigfont1" aria-label="standard atomic weight 10 . 8 1">10.81</span></li>
+             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="8.2980"><span class="bigfont1" aria-label="ionization energy 8 . 2 9 8 0">8.2980</span></li> 
+          </ul>
+       </td>
       <td>Row 2, Cell 14</td>
       <td>Row 2, Cell 15</td>
       <td>Row 2, Cell 16</td>
