--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <td class="hidden">Row 2, Cell 10</td>
       <td class="hidden">Row 2, Cell 11</td>
       <td class="hidden">Row 2, Cell 12</td>
-            <td id="boron" class="solids" tabindex="0">
+         <td id="boron" class="solids" tabindex="0">
            <ul>
             <ul>
              <li data-atomicnumber="5"><span class="bigfont1" aria-label="atomic number 5">5</span></li>
@@ -160,7 +160,17 @@
              <li data-ev="8.2980"><span class="bigfont1" aria-label="ionization energy 8 . 2 9 8 0">8.2980</span></li> 
           </ul>
        </td>
-      <td>Row 2, Cell 14</td>
+         <td id="carbon" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="6"><span class="bigfont1" aria-label="atomic number 6">6</span></li>
+             <li data-symbol="c" aria-label="atomic symbol C" class="bigfont2">C<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="carbon"><span class="bigfont1" aria-label="element">Carbon</span></li>
+             <li data-weight="12.011"><span class="bigfont1" aria-label="standard atomic weight 12 . 0 1 1">12.011</span></li>
+             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="11.2603"><span class="bigfont1" aria-label="ionization energy 11 . 2 6 0 3">11.2603</span></li> 
+          </ul>
+       </td>
       <td>Row 2, Cell 15</td>
       <td>Row 2, Cell 16</td>
       <td>Row 2, Cell 17</td>
