--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
              <li data-ev="8.2980"><span class="bigfont1" aria-label="ionization energy 8 . 2 9 8 0">8.2980</span></li> 
           </ul>
        </td>
-         <td id="carbon" class="solids" tabindex="0">
+       <td id="carbon" class="solids" tabindex="0">
            <ul>
             <ul>
              <li data-atomicnumber="6"><span class="bigfont1" aria-label="atomic number 6">6</span></li>
@@ -171,7 +171,17 @@
              <li data-ev="11.2603"><span class="bigfont1" aria-label="ionization energy 11 . 2 6 0 3">11.2603</span></li> 
           </ul>
        </td>
-      <td>Row 2, Cell 15</td>
+        <td id="nitrogen" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="7"><span class="bigfont1" aria-label="atomic number 7">7</span></li>
+             <li data-symbol="n" aria-label="atomic symbol N" class="bigfont2">N<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="nitrogen"><span class="bigfont1" aria-label="element">Nitrogen</span></li>
+             <li data-weight="14.007"><span class="bigfont1" aria-label="standard atomic weight 14 . 0 0 7">14.007</span></li>
+             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="14.5341"><span class="bigfont1" aria-label="ionization energy 14 . 5 3 4 1">14.5341</span></li> 
+          </ul>
+       </td>
       <td>Row 2, Cell 16</td>
       <td>Row 2, Cell 17</td>
       <td>Row 2, Cell 18</td>
