--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-      <td id="helium" class="solids" tabindex="0">
+      <td id="helium" class="gases" tabindex="0">
            <ul>
             <ul>
              <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number 2">2</span></li>
@@ -178,11 +178,21 @@
              <li data-symbol="n" aria-label="atomic symbol N" class="bigfont2">N<span class="letter-tight">&nbsp;</span></li>
              <li data-element="nitrogen"><span class="bigfont1" aria-label="element">Nitrogen</span></li>
              <li data-weight="14.007"><span class="bigfont1" aria-label="standard atomic weight 14 . 0 0 7">14.007</span></li>
-             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="nitrogen"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="14.5341"><span class="bigfont1" aria-label="ionization energy 14 . 5 3 4 1">14.5341</span></li> 
           </ul>
        </td>
-      <td>Row 2, Cell 16</td>
+       <td id="oxygen" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="8"><span class="bigfont1" aria-label="atomic number 8">8</span></li>
+             <li data-symbol="o" aria-label="atomic symbol O" class="bigfont2">O<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="oxygen"><span class="bigfont1" aria-label="element">Oxygen</span></li>
+             <li data-weight="15.999"><span class="bigfont1" aria-label="standard atomic weight 15 . 9 9 9">15.999</span></li>
+             <li data-groundstate="oxygen"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="13.6181"><span class="bigfont1" aria-label="ionization energy 13 . 6 1 8 1">13.6181</span></li> 
+          </ul>
+       </td>
       <td>Row 2, Cell 17</td>
       <td>Row 2, Cell 18</td>
     </tr>
