--- a/index_backup1.html
+++ b/index_backup1.html
@@ -193,7 +193,17 @@
              <li data-ev="13.6181"><span class="bigfont1" aria-label="ionization energy 13 . 6 1 8 1">13.6181</span></li> 
           </ul>
        </td>
-      <td>Row 2, Cell 17</td>
+       <td id="oxygen" class="flourine" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="9"><span class="bigfont1" aria-label="atomic number 9">9</span></li>
+             <li data-symbol="f" aria-label="atomic symbol F" class="bigfont2">F<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="flourine"><span class="bigfont1" aria-label="element">Flourine</span></li>
+             <li data-weight="18.998"><span class="bigfont1" aria-label="standard atomic weight 18. 9 9 8 9">18.998</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="17.4228"><span class="bigfont1" aria-label="ionization energy 17 . 4 2 2 8">17.4228</span></li> 
+          </ul>
+       </td>
       <td>Row 2, Cell 18</td>
     </tr>
     <tr>
