--- a/index_backup1.html
+++ b/index_backup1.html
@@ -193,7 +193,7 @@
              <li data-ev="13.6181"><span class="bigfont1" aria-label="ionization energy 13 . 6 1 8 1">13.6181</span></li> 
           </ul>
        </td>
-       <td id="oxygen" class="flourine" tabindex="0">
+       <td id="flourine" class="gases" tabindex="0">
            <ul>
             <ul>
              <li data-atomicnumber="9"><span class="bigfont1" aria-label="atomic number 9">9</span></li>
@@ -204,7 +204,17 @@
              <li data-ev="17.4228"><span class="bigfont1" aria-label="ionization energy 17 . 4 2 2 8">17.4228</span></li> 
           </ul>
        </td>
-      <td>Row 2, Cell 18</td>
+       <td id="neon" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="10"><span class="bigfont1" aria-label="atomic number 10">10</span></li>
+             <li data-symbol="ne" aria-label="atomic symbol N e" class="bigfont2">N<span class="letter-tight">e</span></li>
+             <li data-element="neon"><span class="bigfont1" aria-label="element">Neon</span></li>
+             <li data-weight="20.180"><span class="bigfont1" aria-label="standard atomic weight 20 . 1 8 0">20.180</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="21.5645"><span class="bigfont1" aria-label="ionization energy 21 . 5 6 4 5">21.5645</span></li> 
+          </ul>
+       </td>
     </tr>
     <tr>
       <td>Row 3, Cell 1</td>
