--- a/index_backup2.html
+++ b/index_backup2.html
@@ -104,7 +104,7 @@
       <td class="hidden">Row 1, Cell 15</td>
       <td class="hidden">Row 1, Cell 16</td>
       <td class="hidden">Row 1, Cell 17</td>
-      <td id="helium" class="solids" tabindex="0">
+      <td id="helium" class="gases" tabindex="0">
            <ul>
             <ul>
              <li data-atomicnumber="2"><span class="bigfont1" aria-label="atomic number 2">2</span></li>
@@ -178,27 +178,67 @@
              <li data-symbol="n" aria-label="atomic symbol N" class="bigfont2">N<span class="letter-tight">&nbsp;</span></li>
              <li data-element="nitrogen"><span class="bigfont1" aria-label="element">Nitrogen</span></li>
              <li data-weight="14.007"><span class="bigfont1" aria-label="standard atomic weight 14 . 0 0 7">14.007</span></li>
-             <li data-groundstate="boron"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-groundstate="nitrogen"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="14.5341"><span class="bigfont1" aria-label="ionization energy 14 . 5 3 4 1">14.5341</span></li> 
           </ul>
        </td>
-      <td>Row 2, Cell 16</td>
-      <td>Row 2, Cell 17</td>
-      <td>Row 2, Cell 18</td>
+       <td id="oxygen" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="8"><span class="bigfont1" aria-label="atomic number 8">8</span></li>
+             <li data-symbol="o" aria-label="atomic symbol O" class="bigfont2">O<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="oxygen"><span class="bigfont1" aria-label="element">Oxygen</span></li>
+             <li data-weight="15.999"><span class="bigfont1" aria-label="standard atomic weight 15 . 9 9 9">15.999</span></li>
+             <li data-groundstate="oxygen"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="13.6181"><span class="bigfont1" aria-label="ionization energy 13 . 6 1 8 1">13.6181</span></li> 
+          </ul>
+       </td>
+       <td id="flourine" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="9"><span class="bigfont1" aria-label="atomic number 9">9</span></li>
+             <li data-symbol="f" aria-label="atomic symbol F" class="bigfont2">F<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="flourine"><span class="bigfont1" aria-label="element">Flourine</span></li>
+             <li data-weight="18.998"><span class="bigfont1" aria-label="standard atomic weight 18. 9 9 8 9">18.998</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="17.4228"><span class="bigfont1" aria-label="ionization energy 17 . 4 2 2 8">17.4228</span></li> 
+          </ul>
+       </td>
+       <td id="neon" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="10"><span class="bigfont1" aria-label="atomic number 10">10</span></li>
+             <li data-symbol="ne" aria-label="atomic symbol N e" class="bigfont2">N<span class="letter-tight">e</span></li>
+             <li data-element="neon"><span class="bigfont1" aria-label="element">Neon</span></li>
+             <li data-weight="20.180"><span class="bigfont1" aria-label="standard atomic weight 20 . 1 8 0">20.180</span></li>
+             <li data-groundstate="flourine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="21.5645"><span class="bigfont1" aria-label="ionization energy 21 . 5 6 4 5">21.5645</span></li> 
+          </ul>
+       </td>
     </tr>
     <tr>
-      <td>Row 3, Cell 1</td>
+      <td id="sodium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="11"><span class="bigfont1" aria-label="atomic number 11">11</span></li>
+             <li data-symbol="na" aria-label="atomic symbol N a" class="bigfont2">N<span class="letter-tight">a</span></li>
+             <li data-element="sodium"><span class="bigfont1" aria-label="element">Sodium</span></li>
+             <li data-weight="22.990"><span class="bigfont1" aria-label="standard atomic weight 22 . 9 9 0">22.990</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="5.1391"><span class="bigfont1" aria-label="ionization energy 5 . 1 3 9 1">5.1391</span></li> 
+          </ul>
+       </td>
       <td>Row 3, Cell 2</td>
-      <td>Row 3, Cell 3</td>
-      <td>Row 3, Cell 4</td>
-      <td>Row 3, Cell 5</td>
-      <td>Row 3, Cell 6</td>
-      <td>Row 3, Cell 7</td>
-      <td>Row 3, Cell 8</td>
-      <td>Row 3, Cell 9</td>
-      <td>Row 3, Cell 10</td>
-      <td>Row 3, Cell 11</td>
-      <td>Row 3, Cell 12</td>
+      <td class="hidden">Row 3, Cell 3</td>
+      <td class="hidden">Row 3, Cell 4</td>
+      <td class="hidden">Row 3, Cell 5</td>
+      <td class="hidden">Row 3, Cell 6</td>
+      <td class="hidden">Row 3, Cell 7</td>
+      <td class="hidden">Row 3, Cell 8</td>
+      <td class="hidden">Row 3, Cell 9</td>
+      <td class="hidden">Row 3, Cell 10</td>
+      <td class="hidden">Row 3, Cell 11</td>
+      <td class="hidden">Row 3, Cell 12</td>
       <td>Row 3, Cell 13</td>
       <td>Row 3, Cell 14</td>
       <td>Row 3, Cell 15</td>
