--- a/index.html
+++ b/index.html
@@ -227,8 +227,18 @@
              <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="5.1391"><span class="bigfont1" aria-label="ionization energy 5 . 1 3 9 1">5.1391</span></li> 
           </ul>
-       </td>
-      <td>Row 3, Cell 2</td>
+      </td>
+      <td id="magnesium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="12"><span class="bigfont1" aria-label="atomic number 12">12</span></li>
+             <li data-symbol="mg" aria-label="atomic symbol M g" class="bigfont2">M<span class="letter-tight">g</span></li>
+             <li data-element="magnesium"><span class="bigfont1" aria-label="element">Magnesium</span></li>
+             <li data-weight="24.305"><span class="bigfont1" aria-label="standard atomic weight 24 . 3 0 5">24.305</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.6462"><span class="bigfont1" aria-label="ionization energy 7 . 6 4 6 2">7.6462</span></li> 
+          </ul>
+      </td>
       <td class="hidden">Row 3, Cell 3</td>
       <td class="hidden">Row 3, Cell 4</td>
       <td class="hidden">Row 3, Cell 5</td>
