--- a/index_backup1.html
+++ b/index_backup1.html
@@ -217,18 +217,38 @@
        </td>
     </tr>
     <tr>
-      <td>Row 3, Cell 1</td>
-      <td>Row 3, Cell 2</td>
-      <td>Row 3, Cell 3</td>
-      <td>Row 3, Cell 4</td>
-      <td>Row 3, Cell 5</td>
-      <td>Row 3, Cell 6</td>
-      <td>Row 3, Cell 7</td>
-      <td>Row 3, Cell 8</td>
-      <td>Row 3, Cell 9</td>
-      <td>Row 3, Cell 10</td>
-      <td>Row 3, Cell 11</td>
-      <td>Row 3, Cell 12</td>
+      <td id="sodium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="11"><span class="bigfont1" aria-label="atomic number 11">11</span></li>
+             <li data-symbol="na" aria-label="atomic symbol N a" class="bigfont2">N<span class="letter-tight">a</span></li>
+             <li data-element="sodium"><span class="bigfont1" aria-label="element">Sodium</span></li>
+             <li data-weight="22.990"><span class="bigfont1" aria-label="standard atomic weight 22 . 9 9 0">22.990</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="5.1391"><span class="bigfont1" aria-label="ionization energy 5 . 1 3 9 1">5.1391</span></li> 
+          </ul>
+      </td>
+      <td id="magnesium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="12"><span class="bigfont1" aria-label="atomic number 12">12</span></li>
+             <li data-symbol="mg" aria-label="atomic symbol M g" class="bigfont2">M<span class="letter-tight">g</span></li>
+             <li data-element="magnesium"><span class="bigfont1" aria-label="element">Magnesium</span></li>
+             <li data-weight="24.305"><span class="bigfont1" aria-label="standard atomic weight 24 . 3 0 5">24.305</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.6462"><span class="bigfont1" aria-label="ionization energy 7 . 6 4 6 2">7.6462</span></li> 
+          </ul>
+      </td>
+      <td class="hidden">Row 3, Cell 3</td>
+      <td class="hidden">Row 3, Cell 4</td>
+      <td class="hidden">Row 3, Cell 5</td>
+      <td class="hidden">Row 3, Cell 6</td>
+      <td class="hidden">Row 3, Cell 7</td>
+      <td class="hidden">Row 3, Cell 8</td>
+      <td class="hidden">Row 3, Cell 9</td>
+      <td class="hidden">Row 3, Cell 10</td>
+      <td class="hidden">Row 3, Cell 11</td>
+      <td class="hidden">Row 3, Cell 12</td>
       <td>Row 3, Cell 13</td>
       <td>Row 3, Cell 14</td>
       <td>Row 3, Cell 15</td>
