--- a/index.html
+++ b/index.html
@@ -249,7 +249,17 @@
       <td class="hidden">Row 3, Cell 10</td>
       <td class="hidden">Row 3, Cell 11</td>
       <td class="hidden">Row 3, Cell 12</td>
-      <td>Row 3, Cell 13</td>
+      <td id="aluminum" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="13"><span class="bigfont1" aria-label="atomic number 13">13</span></li>
+             <li data-symbol="al" aria-label="atomic symbol A l" class="bigfont2">A<span class="letter-tight">l</span></li>
+             <li data-element="m"><span class="bigfont1" aria-label="element">Aluminum</span></li>
+             <li data-weight="26.982"><span class="bigfont1" aria-label="standard atomic weight 26 . 9 8 2 5">26.982</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="5.9858"><span class="bigfont1" aria-label="ionization energy 5 . 9 8 5 8">5.9858</span></li> 
+          </ul>
+      </td>
       <td>Row 3, Cell 14</td>
       <td>Row 3, Cell 15</td>
       <td>Row 3, Cell 16</td>
