--- a/index_backup1.html
+++ b/index_backup1.html
@@ -249,8 +249,28 @@
       <td class="hidden">Row 3, Cell 10</td>
       <td class="hidden">Row 3, Cell 11</td>
       <td class="hidden">Row 3, Cell 12</td>
-      <td>Row 3, Cell 13</td>
-      <td>Row 3, Cell 14</td>
+      <td id="aluminum" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="13"><span class="bigfont1" aria-label="atomic number 13">13</span></li>
+             <li data-symbol="al" aria-label="atomic symbol A l" class="bigfont2">A<span class="letter-tight">l</span></li>
+             <li data-element="magnesium"><span class="bigfont1" aria-label="element">Aluminum</span></li>
+             <li data-weight="26.982"><span class="bigfont1" aria-label="standard atomic weight 26 . 9 8 2 5">26.982</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="5.9858"><span class="bigfont1" aria-label="ionization energy 5 . 9 8 5 8">5.9858</span></li> 
+          </ul>
+      </td>
+      <td id="silicone" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="14"><span class="bigfont1" aria-label="atomic number 14">14</span></li>
+             <li data-symbol="si" aria-label="atomic symbol S i" class="bigfont2">S<span class="letter-tight">i</span></li>
+             <li data-element="silicone"><span class="bigfont1" aria-label="element">Silicon</span></li>
+             <li data-weight="28.085"><span class="bigfont1" aria-label="standard atomic weight 28 . 0 8 5">28.085</span></li>
+             <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="8.1517"><span class="bigfont1" aria-label="ionization energy 8 . 1 5 1 7">8.1517</span></li> 
+          </ul>
+      </td>
       <td>Row 3, Cell 15</td>
       <td>Row 3, Cell 16</td>
       <td>Row 3, Cell 17</td>
