--- a/index.html
+++ b/index.html
@@ -260,18 +260,28 @@
              <li data-ev="5.9858"><span class="bigfont1" aria-label="ionization energy 5 . 9 8 5 8">5.9858</span></li> 
           </ul>
       </td>
-      <td id="silicone" class="solids" tabindex="0">
+      <td id="silicon" class="solids" tabindex="0">
            <ul>
             <ul>
              <li data-atomicnumber="14"><span class="bigfont1" aria-label="atomic number 14">14</span></li>
              <li data-symbol="si" aria-label="atomic symbol S i" class="bigfont2">S<span class="letter-tight">i</span></li>
-             <li data-element="silicone"><span class="bigfont1" aria-label="element">Silicon</span></li>
+             <li data-element="silicon"><span class="bigfont1" aria-label="element">Silicon</span></li>
              <li data-weight="28.085"><span class="bigfont1" aria-label="standard atomic weight 28 . 0 8 5">28.085</span></li>
              <li data-groundstate="sodium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="8.1517"><span class="bigfont1" aria-label="ionization energy 8 . 1 5 1 7">8.1517</span></li> 
           </ul>
       </td>
-      <td>Row 3, Cell 15</td>
+      <td id="phosphorus" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="15"><span class="bigfont1" aria-label="atomic number 15">15</span></li>
+             <li data-symbol="p" aria-label="atomic symbol P" class="bigfont2">P<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="phosphorus"><span class="bigfont1" aria-label="element">Phosphorus</span></li>
+             <li data-weight="30.974"><span class="bigfont1" aria-label="standard atomic weight 30 . 9 7 4">30.974</span></li>
+             <li data-groundstate="phosphorus"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="10.4867"><span class="bigfont1" aria-label="ionization energy 10 . 4 8 6 7">10.4867</span></li> 
+          </ul>
+      </td>
       <td>Row 3, Cell 16</td>
       <td>Row 3, Cell 17</td>
       <td>Row 3, Cell 18</td>
