--- a/index.html
+++ b/index.html
@@ -282,7 +282,17 @@
              <li data-ev="10.4867"><span class="bigfont1" aria-label="ionization energy 10 . 4 8 6 7">10.4867</span></li> 
           </ul>
       </td>
-      <td>Row 3, Cell 16</td>
+      <td id="sulfur" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="16"><span class="bigfont1" aria-label="atomic number 16">16</span></li>
+             <li data-symbol="s" aria-label="atomic symbol S" class="bigfont2">S<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="sulfur"><span class="bigfont1" aria-label="element">Sulfur</span></li>
+             <li data-weight=" 32.06"><span class="bigfont1" aria-label="standard atomic weight 32  .0 6">32.06</span></li>
+             <li data-groundstate="sulfur"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="10.3600"><span class="bigfont1" aria-label="ionization energy 10 . 3 6 0 0">10.3600</span></li> 
+          </ul>
+      </td>
       <td>Row 3, Cell 17</td>
       <td>Row 3, Cell 18</td>
     </tr>
