--- a/css/main_backup.html
+++ b/css/main_backup.html
@@ -18,10 +18,15 @@ background-color: #98FB98;
 }
 ul {
   list-style: none;
-  margin-left: -25px;
+  text-align: center;
+  margin-left: -30px;
+  margin-right: 10px;
 }
 table, th, td {
   border: 1px solid black;
+}
+td {
+  width: 59px;
 }
 .left100 {
   margin-left:100px;
@@ -47,9 +52,6 @@ table, th, td {
 }
 .em-tight { 
   letter-spacing: -0.05em; 
-}
-td {
-  width: 50px;
 }
 li:first-child::before {
   color: green;
