--- a/index.html
+++ b/index.html
@@ -288,12 +288,22 @@
              <li data-atomicnumber="16"><span class="bigfont1" aria-label="atomic number 16">16</span></li>
              <li data-symbol="s" aria-label="atomic symbol S" class="bigfont2">S<span class="letter-tight">&nbsp;</span></li>
              <li data-element="sulfur"><span class="bigfont1" aria-label="element">Sulfur</span></li>
-             <li data-weight=" 32.06"><span class="bigfont1" aria-label="standard atomic weight 32  .0 6">32.06</span></li>
+             <li data-weight="32.06"><span class="bigfont1" aria-label="standard atomic weight 32  .0 6">32.06</span></li>
              <li data-groundstate="sulfur"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="10.3600"><span class="bigfont1" aria-label="ionization energy 10 . 3 6 0 0">10.3600</span></li> 
           </ul>
       </td>
-      <td>Row 3, Cell 17</td>
+      <td id="chlorine" class="gases" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="17"><span class="bigfont1" aria-label="atomic number 17">17</span></li>
+             <li data-symbol="cl" aria-label="atomic symbol C l" class="bigfont2">C<span class="letter-tight">l</span></li>
+             <li data-element="chlorine"><span class="bigfont1" aria-label="element">Chlorine</span></li>
+             <li data-weight="35.45"><span class="bigfont1" aria-label="standard atomic weight 35 . 4 5"> 35.45</span></li>
+             <li data-groundstate="chlorine"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="12.9676"><span class="bigfont1" aria-label="ionization energy 12 . 9 6 7 6">12.9676</span></li> 
+          </ul>
+      </td>
       <td>Row 3, Cell 18</td>
     </tr>
     <tr>
