--- a/index.html
+++ b/index.html
@@ -317,7 +317,17 @@
       </td>
     </tr>
     <tr>
-      <td>Row 4, Cell 1</td>
+      <td id="potassium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="19"><span class="bigfont1" aria-label="atomic number 19">19</span></li>
+             <li data-symbol="k" aria-label="atomic symbol K" class="bigfont2">K<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="potassium"><span class="bigfont1" aria-label="element">Potassium</span></li>
+             <li data-weight="39.098"><span class="bigfont1" aria-label="standard atomic weight 39 . 0 9 8">39.098</span></li>
+             <li data-groundstate="potassium"><span class="bigfont1" aria-label="ground [Ar]4s">[Ar]4s</span></li>
+             <li data-ev="4.3407"><span class="bigfont1" aria-label="ionization energy 4 . 3 4 0 7">4.3407</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 2</td>
       <td>Row 4, Cell 3</td>
       <td>Row 4, Cell 4</td>
