--- a/index.html
+++ b/index.html
@@ -339,7 +339,17 @@
              <li data-ev="6.1132"><span class="bigfont1" aria-label="ionization energy 6 . 1 1 3 2">6.1132</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 3</td>
+       <td id="scandium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="20"><span class="bigfont1" aria-label="atomic number 20">20</span></li>
+             <li data-symbol="ca" aria-label="atomic symbol C a" class="bigfont2">C<span class="letter-tight">a</span></li>
+             <li data-element="scandium"><span class="bigfont1" aria-label="element">Scandium</span></li>
+             <li data-weight="40.078"><span class="bigfont1" aria-label="standard atomic weight 40 . 078">40.078</span></li>
+             <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.1132"><span class="bigfont1" aria-label="ionization energy 6 . 1 1 3 2">6.1132</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 4</td>
       <td>Row 4, Cell 5</td>
       <td>Row 4, Cell 6</td>
