--- a/index.html
+++ b/index.html
@@ -349,6 +349,18 @@
              <li data-groundstate="scandium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
              <li data-ev="6.5615"><span class="bigfont1" aria-label="ionization energy 6 . 5 6 1 5">6.5615</span></li> 
           </ul>
+      </td>  
+          
+       <td id="titanium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="22"><span class="bigfont1" aria-label="atomic number 22">22</span></li>
+             <li data-symbol="ti" aria-label="atomic symbol T i" class="bigfont2">T<span class="letter-tight">i</span></li>
+             <li data-element="titanium"><span class="bigfont1" aria-label="element">Titanium</span></li>
+             <li data-weight="47.867"><span class="bigfont1" aria-label="standard atomic weight 47 . 8 6 7">47.867</span></li>
+             <li data-groundstate="titanium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.8281"><span class="bigfont1" aria-label="ionization energy 6 . 8 2 8 1">6.8281</span></li> 
+          </ul>
       </td>
       <td>Row 4, Cell 4</td>
       <td>Row 4, Cell 5</td>
@@ -472,7 +484,7 @@
   <div  class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
      <ul>
-        <li>content: 25 November 2019</li>
+        <li>content: 26 November 2019</li>
      </ul>
   </div>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
