--- a/index.html
+++ b/index.html
@@ -372,7 +372,17 @@
              <li data-ev="6.7462"><span class="bigfont1" aria-label="ionization energy 6 . 7 4 6 2">6.7462</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 5</td>
+      <td id="chromium" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="24"><span class="bigfont1" aria-label="atomic number 24">24</span></li>
+             <li data-symbol="c r" aria-label="atomic symbol C r " class="bigfont2">C<span class="letter-tight">r</span></li>
+             <li data-element="chromium"><span class="bigfont1" aria-label="element">Chromium</span></li>
+             <li data-weight="51.996"><span class="bigfont1" aria-label="standard atomic weight 51 . 9 9 6">51.996</span></li>
+             <li data-groundstate="chromium"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="6.7665"><span class="bigfont1" aria-label="ionization energy 6 . 7 6 6 5">6.7665</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 6</td>
       <td>Row 4, Cell 7</td>
       <td>Row 4, Cell 8</td>
