--- a/index.html
+++ b/index.html
@@ -405,7 +405,17 @@
              <li data-ev="7 . 9 0 2 5"><span class="bigfont1" aria-label="ionization energy 7 . 9 0 2 5">7.9025</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 8</td>
+      <td id="cobalt" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="27"><span class="bigfont1" aria-label="atomic number 27">27</span></li>
+             <li data-symbol="co" aria-label="atomic symbol C o " class="bigfont2">C<span class="letter-tight">o</span></li>
+             <li data-element="cobalt"><span class="bigfont1" aria-label="element">Cobalt</span></li>
+             <li data-weight="58.933"><span class="bigfont1" aria-label="standard atomic weight 58 . 9 3 3">58.933</span></li>
+             <li data-groundstate="cobalt"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.8810"><span class="bigfont1" aria-label="ionization energy 7 . 8 8 1 0">7.8810</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 9</td>
       <td>Row 4, Cell 10</td>
       <td>Row 4, Cell 11</td>
