--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 }
 #table_id th, #table_id td {
   font-weight: bold;
-    border-style: transparent;	
+  border-style:none;	
 }	
 </style>
  </head>
